2008-08-30  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerservice.py.in
	(BreakTestCase.tourneyNewState_tourneyResumeAndDeal): split
	from test_tourneyNewState() and reworked to handle reactor call.
	(BreakTestCase.test02_tourneyNewState_tourneyResumeAndDeal_nowait):
	Wrote test.
	(BreakTestCase.test03_tourneyNewState_tourneyResumeAndDeal_withWait):
	Wrote test.
	(BreakTestCase.tourneyNewState_tourneyStart): Wrote method, based
	on tourneyNewState_tourneyResumeAndDeal.
	(BreakTestCase.test04_tourneyNewState_tourneyStart_nowait): Wrote test.
	(BreakTestCase.test05_tourneyNewState_tourneyStart_withWait):
	Wrote test.
	(BreakTestCase.tourneyFinish): Wrote method.
	(BreakTestCase.test06_tourneyFinish_nowait): Wrote test.
	(BreakTestCase.test07_tourneyFinish_withWait): Wrote test.
	(PokerServiceTestCase.test00_5_configValues): Wrote test.
	(PokerServiceTestCase.configValues): Added checks on self.service.delays
	(BreakTestCase.tourneyFinish): Moved db restore to before deferred return.
	(BreakTestCase.tourneyNewState_tourneyStart): Moved db restore to
	before deferred return.
	(BreakTestCase.tourneyNewState_tourneyResumeAndDeal): Moved db
	restore to before deferred return.

2008-08-28  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerservice.py.in
	(BreakTestCase.test01_tourneyNewState_noCallbacksNeeded): split
	test_tourneyNewState().

2008-08-27  Bradley M. Kuhn  <bkuhn@ebb.org>

	* pokernetwork/pokerservice.py (PokerService.tourneyNewState):
	Added check and delay for extra_wait_tourney_break
	(PokerService.tourneyResumeAndDeal): Wrote method.
	(PokerService.tourneyDestroyGame): delay actual table destruction
	based on extra_wait_tourney_finish
	(PokerService.tourneyDestroyGameActual): Created method.

2008-08-26  Loic Dachary <loic@dachary.org>

 	* Release 1.7.0

	* tests/test-proxyfilter.py.in: test06_tableSeat_auth to verify
	  authentication survives proxy requests
	* pokernetwork/proxyfilter.py: copy the args from the URL in the
	  proxy request